--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
+        sudo apt update
+        sudo apt install -y libpcap-dev
     - name: Install
       run: |
         pip install -e .[dev]
