--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Setup dummy0
       run: |
         sudo modprobe dummy
+        dmesg
+        sudo ip link
         sudo ip link set dummy0 up
         sudo ip addr add 172.27.224.1 dev dummy0
     - name: Test with pytest
