--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,9 +14,13 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        sudo apt update
+        sudo apt install -y libpcap-dev
     - name: Install
       run: |
-        python -m pip install --upgrade pip
         pip install -e .[dev]
     - uses: ammaraskar/sphinx-action@master
       with:
