--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Update documentation" -a || true
+        git commit -m "Update documentation to $GITHUB_SHA" -a || true
         # The above command will fail if no changes were present, so we ignore
         # the return code.
     - name: Push changes
