--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
         git fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin gh-pages
         git worktree add gh-pages gh-pages
         git -C gh-pages rm -rf .
-        cp -r docs/_build/html/* gh-pages/
+        cp -r docs/_build/html/. gh-pages/
         cd gh-pages
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
