--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         make html
       working-directory: ./docs
-    - name: Commit documentation changes
+    - name: Commit & push documentation changes
       run: |
         git fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin gh-pages
         git worktree add gh-pages gh-pages
@@ -36,12 +36,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Update documentation to $GITHUB_SHA" -a || true
+        git commit -m "Update documentation to $GITHUB_SHA" || true
         # The above command will fail if no changes were present, so we ignore
         # the return code.
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        branch: gh-pages
-        directory: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        git push
