--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -16,22 +16,22 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
 
-      - name: Install dependencies
+      - name: Install dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
           python -m pip install --upgrade pip setuptools wheel
           sudo apt update
           sudo apt install -y libpcap-dev
 
-      - name: Install dependencies
+      - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.11.zip -OutFile npcak-sdk.zip
+          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.11.zip -OutFile npcap-sdk.zip
           Expand-Archive npcap-sdk.zip
           echo "NPCAP_SDK=$(Resolve-Path npcap-sdk)" >> $GITHUB_ENV
 
-      - name: Install dependencies
+      - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
           python -m pip install --upgrade pip setuptools wheel
