--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.2.2
+        env:
+          CIBW_ENVIRONMENT_WINDOWS: NPCAP_SDK=$NPCAP_SDK
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
