--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,7 +39,7 @@ jobs:
         env:
           CIBW_BEFORE_ALL_LINUX: >
             yum install -y libpcap-devel
-          CIBW_ENVIRONMENT_WINDOWS: NPCAP_SDK=$NPCAP_SDK
+          CIBW_ENVIRONMENT_WINDOWS: NPCAP_SDK=${{ env.NPCAP_SDK }}
 
       - uses: actions/upload-artifact@v2
         with:
