--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,6 +1,13 @@
 name: Build Wheels
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - master
+  # TODO: Probably should remove before merging
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build_wheels:
