--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,22 +24,17 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
 
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install cibuildwheel==2.2.2
+
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
-          python -m pip install --upgrade pip setuptools wheel
           Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.11.zip -OutFile npcap-sdk.zip
           Expand-Archive npcap-sdk.zip
           echo "NPCAP_SDK=$(Resolve-Path npcap-sdk)" >> $env:GITHUB_ENV
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          brew install libpcap
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.2.2
 
       - name: Build wheels
         run: |
