Try adding libnl and bluez

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -42,10 +42,10 @@ jobs:
         env:
           CIBW_SKIP: 'pp* *-musllinux*'
           CIBW_BEFORE_ALL_LINUX: >
+            yum install -y flex bison libnl-devel bluez-libs-devel &&
             curl https://www.tcpdump.org/release/libpcap-1.10.1.tar.gz -O &&
             tar xf libpcap-1.10.1.tar.gz &&
             cd libpcap-1.10.1 &&
-            yum install -y flex bison &&
             ./configure &&
             make -j2 &&
             make install
