--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,7 +6,7 @@ on:
     - master
   release:
     types:
-    - created
+    - published
 
 jobs:
   build_wheels:
@@ -63,7 +63,7 @@ jobs:
   upload_release:
     needs: [build_wheels]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'created'
+    if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
     - uses: actions/download-artifact@v2
