--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
     - master
-  release:
-    types:
-    - published
+    tags:
+    - 'v[0-9].*'
 
 jobs:
   build_wheels:
@@ -15,23 +14,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS-10.15]
+        os: [ubuntu-20.04, windows-2019, macOS-11]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
-
-      - name: Install cibuildwheel
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install cibuildwheel==2.3.1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
-          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.11.zip -OutFile npcap-sdk.zip
+          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.13.zip -OutFile npcap-sdk.zip
           Expand-Archive npcap-sdk.zip
           echo "NPCAP_SDK=$(Resolve-Path npcap-sdk)" >> $env:GITHUB_ENV
 
@@ -42,8 +37,7 @@ jobs:
           python setup.py sdist
 
       - name: Build wheels
-        run: |
-          python -m cibuildwheel --output-dir dist
+        uses: pypa/cibuildwheel@v2.10.2
         env:
           CIBW_SKIP: 'pp* *-musllinux*'
           CIBW_BEFORE_ALL_LINUX: >
@@ -55,8 +49,10 @@ jobs:
             make -j2 &&
             make install
           CIBW_ENVIRONMENT_WINDOWS: NPCAP_SDK=$NPCAP_SDK
+        with:
+          output-dir: dist
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*
 
@@ -64,10 +60,10 @@ jobs:
     name: Upload release
     needs: [build_wheels]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v3
       with:
         name: artifact
         path: dist
@@ -75,4 +71,5 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
+        draft: true
         files: dist/*
