--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
     - name: Install dependencies
@@ -26,17 +26,7 @@ jobs:
       run: |
         make html
       working-directory: ./docs
-    - name: Commit & push documentation changes
-      run: |
-        git fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin gh-pages
-        git worktree add gh-pages gh-pages
-        git -C gh-pages rm -rf .
-        cp -r docs/_build/html/. gh-pages/
-        cd gh-pages
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation to $GITHUB_SHA" || true
-        # The above command will fail if no changes were present, so we ignore
-        # the return code.
-        git push
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: docs/_build/html
