--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -53,8 +53,9 @@ jobs:
         with:
           output-dir: dist
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: wheels-${{ matrix.os }}
           path: dist/*
 
   upload_release:
@@ -64,9 +65,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
 
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: artifact
+        pattern: wheels-*
+        merge-multiple: true
         path: dist
 
     - name: Release
