--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,6 +6,7 @@ on:
     - main
     tags:
     - 'v[0-9].*'
+  workflow_dispatch:
 
 jobs:
   build_wheels:
@@ -21,7 +22,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
@@ -37,15 +38,15 @@ jobs:
           python setup.py sdist
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.17.0
+        uses: pypa/cibuildwheel@v2.21.3
         env:
           CIBW_SKIP: 'pp* *-musllinux*'
           CIBW_ARCHS_MACOS: universal2
           CIBW_BEFORE_ALL_LINUX: >
             yum install -y flex bison libnl3-devel bluez-libs-devel &&
-            curl https://www.tcpdump.org/release/libpcap-1.10.1.tar.gz -O &&
-            tar xf libpcap-1.10.1.tar.gz &&
-            cd libpcap-1.10.1 &&
+            curl https://www.tcpdump.org/release/libpcap-1.10.5.tar.gz -O &&
+            tar xf libpcap-1.10.5.tar.gz &&
+            cd libpcap-1.10.5 &&
             ./configure &&
             make -j2 &&
             make install
