--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,17 +6,19 @@ on:
     - main
 
 jobs:
-  docs:
+  build:
+    name: Build docs
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.13'
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
         sudo apt update
         sudo apt install -y libpcap-dev
     - name: Install
@@ -26,8 +28,19 @@ jobs:
       run: |
         make html
       working-directory: ./docs
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v4
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+        path: ./docs/_build/html
+
+  deploy:
+    name: Deploy
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
